# e-commerce-don-khalid

./: README.md  connect.php  firebase.json  functions.php  pubspec.yaml  test.php  translations_untranslated_found.csv
android/: build.gradle.kts
android/app/: build.gradle.kts  google-services.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_link_api.dart  firebase_options.dart  link_api.dart  main.dart  recommendation_screen.dart  redme.md  routest.dart  test.dart  widget_preview.dart
lib/bindings/: inital_binding.dart
lib/controller/: add_address_controller.dart  cart_controller.dart  checkout_controller.dart  fav_controller.dart  home_controller.dart  home_with_bottom_nav_bar.dart  home_with_bottom_nav_bar_controler.dart  home_with_bottom_nav_bar_controller.dart  myFavController.dart  offers_controller.dart  on_boarding_controller.dart  order_controller.dart  order_details_controller.dart  product_details_controller.dart  products_controller.dart  recomendation_controller.dart  recomendationi_controller.dart  redme.md  search_controller.dart  search_discount_products_controller.dart  settings_controller.dart  test_controller.dart  view_notfication_controller.dart
lib/data/: redme.md
lib/view/: discount_products_details.dart  test_view.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  main.cc  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+241 files in other folders)
